--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -27,22 +27,23 @@
                 <div class="collapse navbar-collapse flex-row-reverse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li>
-                            <a href="./nosotros.html">Nosotros</a>
+                            <a class="club-te" href="../pages/servicio.html">Club del té</a>
                         </li>
                         <li>
-                            <a href="./tes.html">Tés</a>
+                            <a class="nosotros" href="../pages/nosotros.html">Nosotros</a>
                         </li>
                         <li>
-                            <a href="./servicio.html">Cursos</a>
+                            <a class="tes" href="../pages/tes.html">Tés</a>
                         </li>
                         <li>
-                            <a href="./contacto.html">Contactanos</a>
+                            <a class="contactanos" href="../pages/contacto.html">Contactanos</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
+
     
     <main>
         <section>
@@ -71,13 +72,9 @@
     </div>
     <footer>
         <div>
-            <a href="" target="target_blank"></a><img src="../img/instagram blanco.png" alt="icono instagram">
-            <a href="" target="target_blank"></a><img src="../img/facebook blanco.png" alt="icono facebook">
+            <a href="" target="_blank"></a><i class="bi bi-instagram"></i>
+            <a href="" target="_blank"></a><i class="bi bi-facebook"></i>
         </div>
-        <ul>
-            <li><a href="./pages/contacto.html">Contactanos</a></li>
-        </ul>
-    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
