--- a/index.html
+++ b/index.html
@@ -7,12 +7,20 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/estilos.css">
     <title>Identeaty | Tés únicos</title>
     <link rel="icon" type="image/jpg" href="./img/Idt favicon.svg"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <meta name="description" content="Hacemos del té un arte único. Diseñamos blends únicos todos los meses.¡Unite al Club del Té!">
+    <meta name="keywords" content="té, blend, bebida, artesanal, delivery, identeaty">
+    <meta property="og:type" content="web-site">
+    <meta property="og:title" content="Identeaty | Tés únicos">
+    <meta property="og:url" content="">
+    <meta property="og:image" content="">
+    <meta property="og:description" content="Hacemos del té un arte único. Diseñamos blends únicos todos los meses.¡Unite al Club del Té!">
+
 </head>
 
 <body>
@@ -70,12 +78,12 @@
 
     </main>
     <div class="fixed">
-        <a href=""><img src="./img/whatsapp.png" alt="logo whatsapp"></a>
+        <a href="https://web.whatsapp.com/#" target="_blank"><img src="./img/whatsapp.png" alt="logo whatsapp"></a>
     </div>
     <footer>
         <div>
-            <a href="" target="_blank"></a><i class="bi bi-instagram"></i>
-            <a href="" target="_blank"></a><i class="bi bi-facebook"></i>
+            <a href="https://www.instagram.com/" target="_blank"><i class="bi bi-instagram"></i></a>
+            <a href="https://www.facebook.com/?locale=es_LA" target="_blank"><i class="bi bi-facebook"></i></a>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
