--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -6,12 +6,20 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/estilos.css">
     <title>Identeaty | Nosotros</title>
     <link rel="icon" type="image/jpg" href="../img/Idt favicon.svg"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <meta name="description" content="Hacemos del té un arte único. Diseñamos blends únicos todos los meses.¡Unite al Club del Té!">
+    <meta name="keywords" content="té, blend, bebida, artesanal, delivery, identeaty">
+    <meta property="og:type" content="web-site">
+    <meta property="og:title" content="Identeaty | Nosotros">
+    <meta property="og:url" content="">
+    <meta property="og:image" content="">
+    <meta property="og:description" content="Hacemos del té un arte único. Diseñamos blends únicos todos los meses.¡Unite al Club del Té!">
+
 </head>
 
 <body>
@@ -46,22 +54,27 @@
     <main>
         <section class="titulo">
             <div>
-                <h1>Sobre nosotros</h1>
-                <p>Somos tres hermanos que desde siempre amamos tomar té. Para nosotros este mundo significa encuentro con familia y también ese minutito de pausa para estar con uno mismo.</p>
-                <p>A medida que íbamos conociendo y probando las distintas variedades, nos dimos cuenta que las combinaciones eran infinitas. Con creatividad y pasión por el té pueden surgir maravillosos blends.</p>
-                <p>Luego de distintas capacitaciones, nos animamos a crear Identeaty, una marca que apuesta a la originalidad y a lo único en tés. Cada mes lanzamos cuatro propuestas de blends inspirados en nuestras vivencias y en aquello que nos identifica.</p>
+                <h1>SOBRE NOSOTROS</h1>
+                <div class="tituloparrafos">
+                    <p>Somos tres hermanos que amamos tomar té. Para nosotros este mundo significa encuentro con familia y también ese minutito de pausa para estar con uno mismo.</p>
+                    <p>A medida que íbamos conociendo y probando las distintas variedades, nos dimos cuenta que las combinaciones eran infinitas. Supimos que con creatividad y pasión por el té pueden surgir maravillosos blends.</p>
+                    <p>Luego de distintas capacitaciones, nos animamos a crear Identeaty, una marca que apuesta a la originalidad y a lo exclusivo en tés. Cada mes lanzamos tres propuestas de blends únicas inspiradas en nuestras vivencias y en aquello que nos identifica.</p>
+                </div>
+                
             </div>
         </section>
         
     </main>
     <div class="fixed">
-        <a href=""><img src="../img/whatsapp.png" alt="logo whatsapp"></a>
+        <a href="https://web.whatsapp.com/#"><img src="../img/whatsapp.png" alt="logo whatsapp"></a>
     </div>
     <footer>
         <div>
-            <a href="" target="_blank"></a><i class="bi bi-instagram"></i>
-            <a href="" target="_blank"></a><i class="bi bi-facebook"></i>
+            <a href="https://www.instagram.com/" target="_blank"><i class="bi bi-instagram"></i></a>
+            <a href="https://www.facebook.com/?locale=es_LA" target="_blank"><i class="bi bi-facebook"></i></a>
         </div>
+    </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
