--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -14,12 +14,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <meta name="description" content="Hacemos del té un arte único. Diseñamos blends únicos todos los meses.¡Unite al Club del Té!">
-    <meta name="keywords" content="té, blend, bebida, artesanal, delivery, identeaty">
+    <meta name="keywords" content="té, blend, bebida, artesanal, identeaty, contacto, correo, consulta">
     <meta property="og:type" content="web-site">
     <meta property="og:title" content="Identeaty | Contacto">
     <meta property="og:url" content="">
     <meta property="og:image" content="">
-    <meta property="og:description" content="Hacemos del té un arte único. Diseñamos blends únicos todos los meses.¡Unite al Club del Té!">
+    <meta property="og:description" content="Hacenos una consulta.">
 
 </head>
 
@@ -80,7 +80,7 @@
         
     </main>
     <div class="fixed">
-        <a href="https://web.whatsapp.com/#"><img src="../img/whatsapp.png" alt="logo whatsapp"></a>
+        <a href="https://web.whatsapp.com/#" target="_blank"><img src="../img/whatsapp.png" alt="logo whatsapp"></a>
     </div>
     <footer>
         <div>
